<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toggleBluetooth"
        android:textOn="@string/toggle_bton"
        android:textOff="@string/toggle_btoff"/>

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toggleHangouts"
        android:textOn="@string/toggle_hangoutson"
        android:textOff="@string/toggle_hangoutsoff"/>

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toggleFacebook"
        android:textOn="@string/toggle_facebookon"
        android:textOff="@string/toggle_facebookoff"/>

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toggleOther"
        android:textOn="@string/toggle_otheron"
        android:textOff="@string/toggle_otheroff"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/setTime"
        android:text="@string/btn_set_time"/>


</LinearLayout>
